Basic/provisioner/remote_exec_provi.tf
resource "aws_instance" "my-ec2" {
  ami                    = "ami-0c02fb55956c7d316"
  instance_type          = "t2.micro"
  key_name               = "ur_key"
  vpc_security_group_ids = [aws_security_group.allow_ssh_http.id]

  provisioner "remote-exec" {
    inline = [
      "sudo amazon-linux-extras install -y nginx1.12",
      "sudo systemctl start nginx"
    ]
    connection {
      type        = "ssh"
      user        = "ec2-user"
      private_key = file("./ur_key.pem")
      host        = self.public_ip
    }
  }
}

resource "aws_security_group" "allow_ssh_http" {
  name        = "allow_ssh"
  description = "Security grp to allow ssh"
  ingress {
    description = "SSH into VPC"
    to_port     = 22
    from_port   = 22
    cidr_blocks = ["0.0.0.0/0"]
    protocol    = "tcp"
  }
  ingress {
    description = "http"
    to_port     = 80
    from_port   = 80
    cidr_blocks = ["0.0.0.0/0"]
    protocol    = "tcp"
  }
  egress {
    description = "Outbound allowed"
    to_port     = 65535
    from_port   = 0
    cidr_blocks = ["0.0.0.0/0"]
    protocol    = "tcp"
  }
}
